# vigil

./: .gitignore  Cargo.toml  LICENSE  PARITY.md  README.md  biome.json  flake.nix  package.json  parsers-config.ts  tsconfig.base.json  tsconfig.json
benches/: app_highlight_path.rs  app_state_paths.rs  diff_performance.rs  git.rs  git_rs_new_file_performance.rs  highlight_registry_init.rs  test_fixture.rs.txt
plans/: beauty-pass.md  branch-compare-mode.md  effect-refactor.md  nice-to-have.md
scripts/: build-install.ts
src/: app.rs  cli-args.test.ts  cli-args.ts  cli.rs  event.rs  git.rs  index.tsx  lib.rs  main.rs  sidebar.rs  splash.rs  theme.rs  theme.ts  tree-sitter.ts  ui.rs  watcher.rs
src/app/: branch_compare.rs  commit_search.rs  diff.rs  file_search.rs  mod.rs
src/cli/: index.ts
src/cli/cmd/: cmd.ts  reviewer.ts
src/git/: diff.rs  highlight.rs  mod.rs  parse.rs  repo.rs  types.rs
src/theme/: bank.rs  config.rs  mod.rs
src/tui/: app.tsx  bootstrap.tsx  git.ts  tree-sitter.ts  types.ts
src/ui/: diff.rs  layout.rs  mod.rs  sidebar.rs  splash.rs  status.rs
src/ui/modals/: blame.rs  branch_compare.rs  commit.rs  commit_search.rs  discard.rs  file_search.rs  help.rs  mod.rs  theme.rs
tests/: git_integration.rs
