[package]
name = "vigil"
version = "0.1.0"
description = "An example generated using the event-driven-async template"
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.50.0", features = ["full"] }
color-eyre = "0.6.3"
tree-sitter = "0.25.10"
tree-sitter-highlight = "0.25.4"
tree-sitter-javascript = "0.23.1"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-scala = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-css = "0.25.0"
tree-sitter-ocaml = "0.24.2"
tree-sitter-nix = "0.3.0"
notify = "8.2.0"
unicode-width = "0.2.2"
nucleo-matcher = "0.3.1"
clap = { version = "4.5.55", features = [ "derive" ] }
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
